// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> shadow should match snapshot when shadow down is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 bxBajL"
  />
</DocumentFragment>
`;

exports[`<Box /> shadow should match snapshot when shadow up is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 gtWHUm"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when all margin directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cTVvps"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when all padding directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 kIRRBI"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cQbIpy"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 eumCBp"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when responsive margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jbzyAA"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when responsive padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cUCRhM"
  />
</DocumentFragment>
`;
